# spotify_churn_app

./: README.md  app.py  ml_app.py  model_spotify_churn.pkl  pyproject.toml  requirements.txt  scaler_spotify_churn.pkl
