[project]
name = "spotify-churn-predictor"
version = "1.0.0"
description = "Spotify Customer Churn Prediction App — Final Project Data Science Bootcamp Batch 60 Kelompok 1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.2.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "imbalanced-learn>=0.11.0",
    "streamlit>=1.32.0",
]
